tests/toy/neg/000543_mutation.toylang
program a = { a = a + a sleep; } .
